# stm32-f103-minimalistTemplate

./: .gitignore  CMakeLists.txt  CmakePresets.json  README.md
Drivers/CMSIS/Device/gcc/: STM32F103.ld
src/: main.c
